--- a/frontend/src/style/WhiskiesList.css
+++ b/frontend/src/style/WhiskiesList.css
@@ -1,6 +1,13 @@
 .whiskieListPageContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.logo {
+  width: 20em;
+  height: 20em;
+  margin-top: 1em;
 }
 
 .searchBars {
@@ -13,7 +20,7 @@
 
 .searchBars .searchContainer,
 .searchBars .selectContainer {
-  width: 22em;
+  max-width: 22em;
   margin-bottom: 1em;
   display: flex;
   justify-content: space-between;
