--- a/frontend/src/style/WhiskeyForm.css
+++ b/frontend/src/style/WhiskeyForm.css
@@ -2,6 +2,21 @@ h1 {
   color: white;
 }
 
+.deleteWhiskeyForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.deleteWhiskeyForm button {
+  border: none;
+  border-radius: 0.5em;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  height: max-content;
+  background-color: rgb(224, 207, 153);
+  color: rgb(107, 10, 10);
+  margin: 1em;
+}
+
 .formContainer {
   width: 100%;
   display: flex;
